# RentCrawler

./: .gitignore  .python-version  README.md  codes.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_spider.py  scrapy.cfg  setup.py  sqls.sql
data/: quinto_andar.json  viva_real.json  zap.json
elasticsearch/: rent-quintoandar.json  rent-vrzap.json
rent_crawler/: dupefilter.py  extensions.py  items.py  loggers.py  middlewares.py  pages.py  pipelines.py  providers.py  settings.py
rent_crawler/spiders/: __init__.py  apartments.py  quintoandar.py  vivareal.py  zap.py
vr_crawler/: items.py  middlewares.py  pipelines.py  settings.py
vr_crawler/spiders/: apartment_pictures.py  apartments.py  vivareal.py
